<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnotherSimpleTrackPad</string>
    <string name="select_info">Select or add a connection profile.</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_connect">Connect</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_remove">Delete</string>
    <string name="button_save">Save</string>
    <string name="hint_profile_name">Profile name</string>
    <string name="hint_address">IP</string>
    <string name="hint_port">Port</string>
</resources>
