<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.calimeraw.atrackpad.app.ATrackpad$PlaceholderFragment">

    <TextView
        android:text="@string/select_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Spinner android:id="@+id/connection_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">
            <Button android:id="@+id/add_connection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add"/>
            <Button android:id="@+id/edit_connection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_edit"/>
        </LinearLayout>
    </LinearLayout>
    <Button android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_connect"/>

</LinearLayout>
